Fixed Spinner Z-Index

--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ html, body {
 
 #spinner.faded {
     opacity: 0;
+    z-index: -1;
 }
 
 /* Header / Footer */
